<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginFormLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/loginTitle"
        android:textSize="32sp" />

    <RelativeLayout
        android:id="@+id/loginFormLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <TextView
            android:id="@+id/wikiPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/usernamePrompt"
            android:text="@string/wikiPrompt"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <AutoCompleteTextView
            android:id="@+id/wikiChooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/wikiPrompt"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/wikiPrompt"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:text="@string/defaultWiki" >
        </AutoCompleteTextView>

        <TextView
            android:id="@+id/usernamePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wikiPrompt"
            android:layout_marginTop="36dp"
            android:text="@string/usernamePrompt"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/usernamePrompt"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/usernamePrompt"
            android:ems="10"
            android:inputType="textNoSuggestions" />

        <TextView
            android:id="@+id/passwordPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/usernamePrompt"
            android:layout_below="@+id/usernamePrompt"
            android:layout_marginTop="36dp"
            android:text="@string/passwordPrompt"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/passwordPrompt"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/passwordPrompt"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordPrompt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:onClick="loginButtonClicked"
            android:text="@string/loginButtonLabel" />
    </RelativeLayout>

</RelativeLayout>