<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loadingString"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:id="@+id/summaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/darkgray"
        android:textSize="16sp"
        android:textStyle="italic" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="@drawable/border"
        android:padding="5dp" >

        <TextView
            android:id="@+id/diffText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="5dp"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="?android:attr/dividerHorizontal" />

        <Button
            android:id="@+id/revertButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="revertButtonClicked"
            android:text="@string/revertButtonLabel"
            android:textSize="16sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="?android:attr/dividerHorizontal" />

        <Button
            android:id="@+id/revertVandalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="revertVandalButtonClicked"
            android:text="@string/revertVandalButtonLabel"
            android:textSize="16sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="?android:attr/dividerHorizontal" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="nextButtonClicked"
            android:text="@string/nextButtonLabel"
            android:textSize="16sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="?android:attr/dividerHorizontal" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="?android:attr/dividerVertical" />

</LinearLayout>